fix hero button shift

--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -1508,6 +1508,7 @@ a:visited {
   .hero > div {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
   }
 }
 @media screen and (min-width: 1024px) {
@@ -1573,29 +1574,29 @@ a:visited {
   }
 }
 .hero__btn {
-  position: absolute;
-  bottom: 5rem;
   opacity: 1;
 }
 @media screen and (max-width: 1023px) {
   .hero__btn {
-    bottom: 3rem;
-    left: 50%;
-    transform: translateX(-50%);
-    -webkit-transform: translateX(-50%);
-    -moz-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    -o-transform: translateX(-50%);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .hero__btn {
+    position: relative;
+    bottom: 0;
   }
 }
 @media screen and (min-width: 1250px) {
   .hero__btn {
-    bottom: 6rem;
+    bottom: 2rem;
   }
 }
 @media screen and (min-width: 1500px) {
   .hero__btn {
-    bottom: 9rem;
+    bottom: 4rem;
   }
 }
 
